tests/errors/semantics/condition_must_be_bool.odl
main :: () -> void  {
    if 1 then 1;
};